--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -5569,6 +5569,16 @@ headerbar .nautilus-window .path-bar-box .subtitle {
   border: 0;
   background-color: #EEEEEE; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #31363d;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #31363d;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
